--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -15,14 +15,13 @@
         <div class="price">
             <span class="price">500</span>
             <span class="weight">300 g</span>
+        </div>
     </div>
     <div class="description">Пицца с ветчиной  и грибами</div>
-    <div class="cart-actions">Добавить</button>
+    <div class="cart-actions">
         <input type="Количество">
         <button>+</button>
         <button>-</button>
     </div>
 </body>
 </html>
-
-<p>product works!</p>
