--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,4 +1,14 @@
 .product{
     width: 200px;
-    height:200px;
+    min-height: 200px;
+}
+
+.product > img {
+    width: 200px;
+    height: 200px;
+}
+
+.product .description {
+    word-break: break-word;
+    width: 200px;
 }
