--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,25 +1,6 @@
-<p>header works!</p>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./header.component.css">
-    <title>Document</title>
-</head>
-<body>
-    
-
-
 <div class="banner">
-   
-    
     <h2>Закажи доставку пиццы из дровяной печи! <br>Доставляем за 30 минут!</h2>
-    <h3>  <img  src="../img_pizzas/pizza5.jpg"><br>тел.8-903-983 07 34</h3>
-    
-    
+    <h3>
+        <img  src="../img_pizzas/pizza5.jpg"><br>тел.8-903-983 07 34
+    </h3>
 </div>
-
-</body>
-</html>  
