--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,8 @@
-<p>home works!</p>
+
 <h2>Пицца</h2>
 <section>
     <div class="product-container">
-        <app-product></app-product>
-        <app-product></app-product>
-        <app-product></app-product>
-        <app-product></app-product>
-        <app-product></app-product>
-        <app-product></app-product>
-        <app-product></app-product>
+        <app-product *ngFor="let product of products" [product]=""></app-product>
+       
     </div>
 </section>
