--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,6 @@
 <h2>Пицца</h2>
 <section>
     <div class="product-container">
-        <app-product *ngFor="let product of products" [product]=""></app-product>
-       
+        <app-product *ngFor="let product of products" [product]="product"></app-product>
     </div>
 </section>
