--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,17 +1,14 @@
-
-    <div class="product">
-
-        <img [src]="product.imgUrl" alt="">
-        <span class="name">Пицца{{product.name}}</span>
-        <div class="price">
-            <span class="price">{{product.price}}</span>
-            <span class="weight">{{product.weight}}</span>
-        </div>
-        <div class="description">{{product.description}}</div>
-    <div class="cart-actions">
-    <input type="Количество">
-    <button>+</button>
-    <button>-</button>
-</div>
+<div class="product">
+    <img [src]="product.image" alt="">
+    <span class="name">Пицца{{product.name}}</span>
+    <div class="price">
+        <span class="price">{{product.price}}</span>
     </div>
+    <div class="description">{{product.components}}</div>
+    <div class="cart-actions">
+        <input type="Количество">
+        <button>+</button>
+        <button>-</button>
+    </div>
+</div>
     
