--- a/src/app/product/page/cart/cart.component.html
+++ b/src/app/product/page/cart/cart.component.html
@@ -1,6 +1,6 @@
 <p>cart works!</p>
 <div class="cart-wrapper">
-    <div class="cart-item" *ngFor="let item of cart">
+    <div class="cart-item" *ngFor="let item of cart"></div>
         <p>item.name</p>
         <p>item.price</p>
 </div>
