--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="banner">
     <h2>Закажи доставку пиццы из дровяной печи! <br>Доставляем за 30 минут!</h2>
     <h3>
-        <img  src="../img_pizzas/pizza5.jpg"><br>тел.8-903-983 07 34
+        <img  src="assets\img_pizzas\logopizza.jpg"><br>тел.8-903-983 07 34
     </h3>
 </div>
